<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main XML -->
    <string name="app_name">IthsBlog</string>
    <string name="hello_world">Hello grupp 5!</string>
    <string name="action_settings">Till inlägg</string>
    <string name="title_activity_posts">Posts</string>

    <!-- Posts XML -->
    <string name="head">Titel</string>
    <string name="regular">Write.....</string>
    <string name="button_camera">Camera</string>
    <string name="button_upload"></string>
    <string name="title_activity_camera">Camera</string>
    <string name="up_upload">Upload</string>
    <string name="title_activity_post_list">Post List</string>
    <string name="title_activity_read_post">Read Post</string>
    <string name="delete_post">Are you sure you want to delete this post?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    
    <!-- PostList -->
    <string name="new_post">new post</string>

    <!-- Log In -->
    <string name="title_activity_log_in">Log In</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_member">Not a member?</string>
    <string name="register_new">Register New</string>
    <string name="required">Required!</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_email">Enter valid e-mail: abc@fgh.com</string>
    <string name="invalid_credentials">Invalid Email/Password!\n\nPlease re-enter if already a member.</string>
    <string name="could_not_login">Our apologies, you could not be logged in at\nthis time.\n\nPlease try again later.</string>
    <string name="image_description">Person</string>
    <string name="login_again">Please log in!</string>
    <string name="ok">OK</string>
    
    <!-- Log Out -->
    <string name="log_out">Log Out</string>
    <string name="logged_out">Logged Out!</string>

    <!-- Register New User -->
    <string name="title_activity_register_new_user">Register New</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="atleast_eight_characters">Password must be at least 8 characters</string>
    <string name="not_identical">Passwords must be identical</string>
    <string name="email_hint">E-mail</string>
    <string name="register">Register</string>
    <string name="registration_confirmed">Already a member! You may login if you have\nnot already done so.</string>
	<string name="registration_pending">Please confirm your registration by clicking\non the link sent to you via email.\n\nYou need to do this before you can log in.</string>
	<string name="mail_sent">A verification email has been sent to the\nemail address you provided. Please check\nyour spam and junk folders as well.\n\nClick the link in the email sent to confirm your registration. Thanks!!</string>
	<string name="mail_unsent">Our apologies, verification email could not\nbe sent.\n\nWe will resend it ASAP!</string>
	<string name="user_not_created">Our apologies, you could not be registered.\n\nPlease try again later!</string>
    <string name="title_activity_splash_screen">SplashScreen</string>		
</resources>
