<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ithsblog.RegisterNewUser" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="20dp" >
         
        <EditText
        android:id="@+id/new_username_edit" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>
     
      <EditText
    	android:id="@+id/email_address_edit"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="5dp"
    	android:inputType="textEmailAddress"
    	android:hint="@string/email_hint" />
    
     <EditText
        android:id="@+id/new_password1_edit"         
		android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>
     
     <EditText
        android:id="@+id/new_password2_edit" 
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/reenter_password"/>         
     
     <Button 
         android:id="@+id/register_button"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
         android:background="#D8D8D8"
         android:textColor="#FFFFFF"
         android:textSize="25sp" 
         android:text="@string/register" />                
    </LinearLayout>
     
</RelativeLayout>
