<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:background="@android:color/black"  
    tools:context="com.example.ithsblog.LogIn" >   
    
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerInParent="true"
         android:background="@android:color/white"
         android:gravity="center_vertical"
         android:orientation="vertical"
         android:padding="20dp" >

         <ImageView
             android:id="@+id/person_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:contentDescription="@string/image_description"
             android:src="@drawable/blogg_login" />

         <EditText
             android:id="@+id/email_address_edit"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress" />

         <EditText
             android:id="@+id/password_edit"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:singleLine="true" />

         <Button
             android:id="@+id/log_in_button"
             style="@style/button_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="@string/log_in" />

         <View
             android:id="@+id/divider_line"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="20dp"
             android:background="?android:attr/listDivider" />

         <TextView
             android:id="@+id/not_member_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/not_member"
             android:textSize="15sp"
             android:textStyle="bold" />

         <Button
             android:id="@+id/register_new_button"
             style="@style/button_style"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="@string/register_new" />
     </LinearLayout>

</RelativeLayout>

