<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.textviewexample.MainActivity" >



    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/pic" />

    <LinearLayout android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_below="@+id/image_view"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/upload_button"
            android:layout_marginLeft="1dp"
            android:layout_width="156dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:background="#202020"
            android:layout_marginRight="1dp"
            android:text="@string/button_camera"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <Button
            android:id="@+id/camera_button"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:layout_width="156dp"
            android:layout_marginTop="1dp"
            android:layout_height="50dp"
            android:background="#202020"
            android:text="@string/button_upload"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
        <Button
            android:id="@+id/up_button"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:layout_width="156dp"
            android:layout_marginTop="1dp"
            android:layout_height="50dp"
            android:background="#202020"
            android:text="@string/up_upload"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

    </LinearLayout>
   
    <EditText
        android:id="@+id/edit_view_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttons"
        android:textSize="30sp"
        android:hint="@string/head"
		android:singleLine="true"
		android:inputType="textCapWords"
        android:layout_marginTop="10dp"
         />
     
    <EditText
        android:id="@+id/edit_view_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_view_head"
		android:hint="@string/regular"
		android:singleLine="true"
		android:inputType="textMultiLine"
		android:maxLines="5"
        android:layout_marginTop="5dp" />
 
		<ImageView
		    android:id="@+id/post_icon"
		    android:layout_width="wrap_content"
		    android:layout_marginTop="1dp"
		    android:gravity="right"
		    android:src="@drawable/ic_action_upload"
		    android:layout_below="@+id/edit_view_regular"
		    android:layout_height="wrap_content" />
        
</RelativeLayout>
